fixed spacing issue with syntax highlighter

--- a/public/stylesheets/shcore.css
+++ b/public/stylesheets/shcore.css
@@ -54,7 +54,7 @@
 	font-family: "Consolas", "Bitstream Vera Sans Mono", "Courier New", Courier, monospace !important;
 	font-weight: normal !important;
 	font-style: normal !important;
-	font-size: 0.95em !important;
+	font-size: 0.98em !important;
 	min-height: inherit !important; /* For IE8, FF & WebKit */
 	min-height: auto !important; /* For IE7 */
 }
@@ -98,7 +98,7 @@
 
 .syntaxhighlighter .line .number
 {
-	width: 3em !important;
+	/*width: 3em !important;*/
 }
 
 .syntaxhighlighter .line .number code
